--- a/main.tex
+++ b/main.tex
@@ -138,7 +138,7 @@ recent role was a bicycle technician specializing in diagnosing and repairing el
 		{2014 -- 2019}
 		{B. A (mod) Computer Science}
 		{Trinity College Dublin}
-		{Currently awaiting Final Results but I am currently on track for a 2.1, Modules ranging from implementing logic gates in software to complex computer vision applications.}
+		{2.1 overall while achieving a first class honours in final year, Modules ranging from implementing logic gates in software to complex computer vision applications.}
 	
 \end{entrylist}
 
